save images about vehicles and serve them from our server
